Spring Boot backend: Added code formatting and linting (#340)